--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mysql:
     image: mysql:latest
-    container_name: mysql_db    
+    container_name: library_db    
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
             
