--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon",
-    "seed": "ts-node src/seed.ts"
+    "seed": "ts-node src/db/seed.ts"
   },
   "repository": {
     "type": "git",
